add a shop page layout

--- a/view/shop.html
+++ b/view/shop.html
@@ -4,13 +4,38 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Infinity Company - SHOP</title>
-    <link rel="stylesheet" href='../css/index.css'>
+    <title>Infinity Company</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href='../css/shop.css'>
 </head>
 <body>
-    <nav class='navbar'></nav> 
+    <nav class='navbar'>
        
-  
+    </nav> 
+    <main>
+        <div class="main-banner">
+            <div class="grid-banner">
+                <!-- inserted by js -->
+            </div>
+        </div>
+        <hr>
+       <div class="about-drop">
+        <p class="about-drop-title">Drop 0</p>
+        <p class='about-drop-subtitle'>NOTHING</p>
+
+        <div class="about-drop-text">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur enim ligula, finibus non massa ut, tempus fringilla dui. Duis quam ex, sollicitudin ac mollis at, pellentesque non mi. Sed volutpat tincidunt erat, non faucibus turpis tempus egestas. Phasellus ullamcorper auctor orci, in hendrerit felis pretium vel. Duis venenatis dapibus libero, efficitur lacinia elit bibendum finibus. Nam porttitor posuere orci non rhoncus. Phasellus bibendum enim felis, vel sagittis sapien rhoncus eu. Nulla ccumsan dolor. Nam dictum leo non purus accumsan, eget faucibus elit condimentum. Duis eu purus massa. Aliquam in felis sed elit porttitor sodales id nec quam. Aliquam erat volutpat. Cras sem purus, finibus quis est vel, rhoncus porttitor odio. Morbi quis euismod neque.
+        </div>
+        <iframe src="https://www.youtube.com/embed/Sh2R5lOliZE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+       </div>
+    </main>
+    <footer></footer>
+
     <script src="../js/navbar.js"></script>
+    <script src="../js/shop.js"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>   
+   
 </body>
 </html>
