ajusting a shop page

--- a/view/shop.html
+++ b/view/shop.html
@@ -20,14 +20,39 @@
         </div>
         <hr>
        <div class="about-drop">
-        <p class="about-drop-title">Drop 0</p>
-        <p class='about-drop-subtitle'>NOTHING</p>
+            <p class="about-drop-title">Drop 0</p>
+            <p class='about-drop-subtitle'>NOTHING</p>
 
-        <div class="about-drop-text">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur enim ligula, finibus non massa ut, tempus fringilla dui. Duis quam ex, sollicitudin ac mollis at, pellentesque non mi. Sed volutpat tincidunt erat, non faucibus turpis tempus egestas. Phasellus ullamcorper auctor orci, in hendrerit felis pretium vel. Duis venenatis dapibus libero, efficitur lacinia elit bibendum finibus. Nam porttitor posuere orci non rhoncus. Phasellus bibendum enim felis, vel sagittis sapien rhoncus eu. Nulla ccumsan dolor. Nam dictum leo non purus accumsan, eget faucibus elit condimentum. Duis eu purus massa. Aliquam in felis sed elit porttitor sodales id nec quam. Aliquam erat volutpat. Cras sem purus, finibus quis est vel, rhoncus porttitor odio. Morbi quis euismod neque.
-        </div>
-        <iframe src="https://www.youtube.com/embed/Sh2R5lOliZE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <div class="about-drop-text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur enim ligula, finibus non massa ut, tempus fringilla dui. Duis quam ex, sollicitudin ac mollis at, pellentesque non mi. Sed volutpat tincidunt erat, non faucibus turpis tempus egestas. Phasellus ullamcorper auctor orci, in hendrerit felis pretium vel. Duis venenatis dapibus libero, efficitur lacinia elit bibendum finibus. Nam porttitor posuere orci non rhoncus. Phasellus bibendum enim felis, vel sagittis sapien rhoncus eu. Nulla ccumsan dolor. Nam dictum leo non purus accumsan, eget faucibus elit condimentum. Duis eu purus massa. Aliquam in felis sed elit porttitor sodales id nec quam. Aliquam erat volutpat. Cras sem purus, finibus quis est vel, rhoncus porttitor odio. Morbi quis euismod neque.
+            </div>
+            <iframe src="https://www.youtube.com/embed/Sh2R5lOliZE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
        </div>
+       <!--  -->
+        <section class="description-drop-container">
+            <div class="description-item">
+
+                <img class="description-img" src="../img/image-4.svg" alt="">
+                
+                <div class="description-text">
+                    <p class="text-title">Tee Cereal Monkey White <br> White</p>
+                    <p class="text-subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla et tortor dignissim, dictum tortor quis, accumsan dolor. Nam dictum leo non purus accumsan, eget faucibus elit condimentum. Duis eu purus massa. Aliquam in felis sed elit porttitor sodales id nec quam. Aliquam erat volutpat. Cras sem purus.</p>
+                </div>
+            
+            </div>
+
+            <div class="description-item">
+                
+                <div class="description-text">
+                    <p class="text-title">Tee Cereal Monkey White <br> White</p>
+                    <p class="text-subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla et tortor dignissim, dictum tortor quis, accumsan dolor. Nam dictum leo non purus accumsan, eget faucibus elit condimentum. Duis eu purus massa. Aliquam in felis sed elit porttitor sodales id nec quam. Aliquam erat volutpat. Cras sem purus.</p>
+                </div>
+                
+                <img class="description-img" src="../img/image-5.svg" alt="">
+                
+            </div>
+        </section>
+       <!--  -->
     </main>
     <footer></footer>
 
