--- a/css/shop.css
+++ b/css/shop.css
@@ -119,3 +119,44 @@ iframe{
     width:70vw;
     height:60vh;
 }
+.description-drop-container{
+    width: 70vw;
+    height: auto;
+    margin: 0 auto;
+}
+.description-item{
+    width: 70vw;
+    height: auto;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-direction: row;
+}
+.description-text{
+    width: 700px;
+    font-size: 32px;
+    font-family: 'Dongle', sans-serif;
+    pointer-events: none;
+    user-select: none;
+}
+.description-img{
+    width: 700px;
+    height: auto;
+}
+.text-title{
+    font-family: 'Permanent Marker';
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 400;
+    margin-bottom: 50px;
+    text-align: center;
+}
+.text-subtitle{
+    text-align:justify ;
+}
+.description-text{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
