--- a/view/index.html
+++ b/view/index.html
@@ -9,36 +9,36 @@
     <link rel="stylesheet" href='../css/index.css'>
 </head>
 <body>
-    <nav class='navbar'>
-       
-    </nav> 
+    <header>
+      <nav class='navbar'></nav>
+    </header>   
     <main>
-        <div class="main-bunner">
+      <div class="main-bunner">
 
-             <!-- Carousel bootstrap-->
-             <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-                <div class="carousel-inner">
-                  <div class="carousel-item active">
-                    <img class="d-block w-70" src="../img/Rectangle.png" alt="First slide">
-                  </div>
-                  <div class="carousel-item">
-                    <img class="d-block w-70" src="../img/Rectangle.png" alt="Second slide">
-                  </div>
-                  <div class="carousel-item">
-                    <img class="d-block w-70" src="../img/Rectangle.png" alt="Third slide">
-                  </div>
-                </div>
-                <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                  <span class="sr-only">Previous</span>
-                </a>
-                <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                  <span class="sr-only">Next</span>
-                </a>
-              </div>
-             <!--Fim Carousel-->
-        </div>
+        <!-- Carousel bootstrap-->
+        <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+           <div class="carousel-inner">
+             <div class="carousel-item active">
+               <img class="d-block w-70" src="../img/Rectangle.png" alt="First slide">
+             </div>
+             <div class="carousel-item">
+               <img class="d-block w-70" src="../img/Rectangle.png" alt="Second slide">
+             </div>
+             <div class="carousel-item">
+               <img class="d-block w-70" src="../img/Rectangle.png" alt="Third slide">
+             </div>
+           </div>
+           <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+             <span class="sr-only">Previous</span>
+           </a>
+           <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+             <span class="carousel-control-next-icon" aria-hidden="true"></span>
+             <span class="sr-only">Next</span>
+           </a>
+         </div>
+        <!--Fim Carousel-->
+   </div>
         <article class="drop-info">
             <span class="drop-title"><p>Drop 0 - Nothing</p></span>
             <p class="drop-text">
